--- a/webpages/LoggingPage.html
+++ b/webpages/LoggingPage.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <nav></nav>
-        <h1>2</h1>
+        <nav>
+            <h1>"Start to greatness"</h1>
+        </nav>
         <button class="">Sign in</button>
         <footer>4</footer>
     </div>
