--- a/index.html
+++ b/index.html
@@ -3,30 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discover Toyota</title>
+    <title>FlyCity</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <nav>
-        <a href="vehicles">Vehicles</a> |
-        <a href="electrified">Electrified</a> |
-        <a href="shoppingtools">Shopping Tools</a> |
-        <a href="about">About</a> |
-        <a href="owners">Owners</a>
+        <a href="home">Home</a> |
+        <a href="retro">Retro Sneakers</a> |
+        <a href="hype">Hype Sneakers</a> |
+        <a href="aboutUs">About Us</a> |
+        <a href="contact">Contact</a>
     </nav>
 
     <header>
-        <img src="../images/banner.png" alt="Toyota Banner" class="banner-image">
+        <img src="" alt="shoes" class="image">
     </header>
 
     <section id="slogan">
-        <h1>YOU ASKED FOR IT, YOU GOT IT!</h1>
+        <h1></h1>
     </section>
 
     <section id="about">
         <p>
-            Toyota has been a leader in automotive innovation, renowned for reliability, fuel efficiency, and advanced technology. 
-            We are committed to bringing you the best driving experience, whether for everyday commutes or grand adventures.
+
         </p>
     </section>
 
@@ -34,30 +33,29 @@
         <h2>FEATURED MODELS</h2>
         <ul>
             <li>
-                <img src="../images/landcruiser.png" alt="Toyota Land Cruiser">
-                <p>Land Cruiser</p>
+                <img src="" alt="">
+                <p></p>
             </li>
             <li>
-                <img src="../images/camry.png" alt="Toyota Camry">
-                <p>Camry</p>
+                <img src="" alt="">
+                <p></p>
             </li>
             <li>
-                <img src="../images/rav4.png" alt="Toyota RAV4">
-                <p>RAV4</p>
+                <img src="" alt="">
+                <p></p>
             </li>
         </ul>
     </section>
 
     <section id="extras">
-        <h2>EXTRAS</h2>
+        <h2></h2>
         <p>
-            Join Toyota Rewards for exclusive offers. <a href="signup.html">SIGN UP NOW</a><br>
-            Find a Toyota dealer near you. <a href="dealerlocator.html">DEALER LOCATOR</a>
+           
         </p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Toyota Motor Corporation. All rights reserved.</p>
+        <p>&copy;</p>
         <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a>
     </footer>
 </body>
