--- a/webpages/LoggingPage.html
+++ b/webpages/LoggingPage.html
@@ -12,8 +12,16 @@
         <nav>
             <h1>"Start to greatness"</h1>
         </nav>
-        <button class="">Sign in</button>
-        <footer>4</footer>
+        <form>
+            <fieldset>
+            <legend>sd</legend>
+            </fieldset>
+
+        </form>
+        <button class="signup">Sign in</button>
+        <footer>
+            <p>&copy; "2024 Fly City" All rights reserved.</p>
+        </footer>
     </div>
     
 </body>
