--- a/webpages/LoggingPage.html
+++ b/webpages/LoggingPage.html
@@ -9,19 +9,32 @@
 </head>
 <body>
     <div class="container">
+        <div class="nav-container">
         <nav>
             <h1>"Start to greatness"</h1>
         </nav>
+        </div>
+        <div class="form-container">
         <form>
-            <fieldset>
-            <legend>sd</legend>
-            </fieldset>
-
+            <legend>Sign up</legend>
+            <div>
+            <label for="username">User Name: </label>
+            <input type="text" id="username"> 
+            </div>
+            <br> <div>
+            <label for="passwrd">Password: </label>
+            <input type="text" id="passwrd">
+            </div>
+            <div class="button-container">
+                <button class="signup">Sign in</button>
+            </div>
         </form>
-        <button class="signup">Sign in</button>
+        </div>
+        <div class="footer-container">
         <footer>
             <p>&copy; "2024 Fly City" All rights reserved.</p>
         </footer>
+        </div>
     </div>
     
 </body>
