--- a/webpages/LoggingPage.html
+++ b/webpages/LoggingPage.html
@@ -11,22 +11,21 @@
     <div class="container">
         <div class="nav-container">
         <nav>
-            <h1>"Start to greatness"</h1>
+            <h1>Welcome to Fly City</h1>
         </nav>
+        <h2 id="headTag">Create an account to get started</h2>
         </div>
         <div class="form-container">
-        <form>
+        <form id="regesitration">
             <legend>Sign up</legend>
-            <div>
+            <label for="email">Email: </label>
+            <input type="text" id="email" placeholder="johnWick@gmail.com">
             <label for="username">User Name: </label>
             <input type="text" id="username"> 
-            </div>
-            <br> <div>
             <label for="passwrd">Password: </label>
             <input type="text" id="passwrd">
-            </div>
             <div class="button-container">
-                <button class="signup">Sign in</button>
+                <button class="signup">Register</button>
             </div>
         </form>
         </div>
@@ -36,6 +35,6 @@
         </footer>
         </div>
     </div>
-    
+    <script src="../js/loginscript.js"></script>
 </body>
 </html>
