--- a/webpages/retroSneakers.html
+++ b/webpages/retroSneakers.html
@@ -57,7 +57,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Mollitia, earum. Fugiat, cum doloribus dicta unde ullam, 
                     ipsa dolores odit earum placeat eius et commodi quibusdam 
-                    atque, minus culpa explicabo rerum.</p>
+                    atque, minus.</p>
                     <button id="click">More Info</button>
 
             </div>
