--- a/webpages/retroSneakers.html
+++ b/webpages/retroSneakers.html
@@ -21,7 +21,7 @@
         <div class="bodyText">
             <h1>In serach of good quality Retro Kicks?</h1>
             <h2>Well look no futher, we got you covered</h2>
-            <p>At Fly City, our top priority is ensuring 
+            <p class="contentParagraph">At Fly City, our top priority is ensuring 
                 customer satisfaction with both the style 
                 and quality of our sneakers. To maintain 
                 our high standards, every product undergoes 
@@ -33,14 +33,14 @@
         </div>
         <div class="monthSale">
             <h1>Monthly offer exclusive bundle</h1>
-            <p>Monthly deals usually change every 15th of the month.</p>
+            <p class="contentParagraph">Monthly deals usually change every 15th of the month.</p>
         </div>
         <div class="box">
             <div class="box-selection">
             <img src="../images/hermes-rivera-w83s82yd3Fk-unsplash.jpg" alt="">
             <div class="box-content">
-                <h1>Retro Jordans</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                <h1 class="contentHead">Retro Jordans</h1>
+                <p class="contentParagraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Mollitia, earum. Fugiat, cum doloribus dicta unde ullam, 
                     ipsa dolores odit earum placeat eius et commodi quibusdam 
                     atque, minus culpa explicabo rerum.</p>
@@ -53,8 +53,8 @@
             <div class="box-selection2">
             <img src="../images/marcelo-cid-OJxWv0Dr3jA-unsplash.jpg" alt="">
             <div class="box-content">
-                <h1>Retro Jordans</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                <h1 class="contentHead">Retro Jordans</h1>
+                <p class="contentParagraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Mollitia, earum. Fugiat, cum doloribus dicta unde ullam, 
                     ipsa dolores odit earum placeat eius et commodi quibusdam 
                     atque, minus.</p>
@@ -66,8 +66,8 @@
             <div class="box-selection3">
             <img src="../images/paul-volkmer-AZf7DL-8Qhk-unsplash.jpg" alt="">
             <div class="box-content">
-                <h1>Retro Jordans</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                <h1 class="contentHead">Retro Jordans</h1>
+                <p class="contentParagraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Mollitia, earum. Fugiat, cum doloribus dicta unde ullam, 
                     ipsa dolores odit earum placeat eius et commodi quibusdam 
                     atque, minus culpa explicabo rerum.</p>
@@ -80,8 +80,8 @@
             <div class="box-selection4">
             <img src="../images/joseph-barrientos-eBW4S-S9DtQ-unsplash.jpg" alt="">
             <div class="box-content">
-                <h1>Retro Jordans</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                <h1 class="contentHead">Retro Jordans</h1>
+                <p class="contentParagraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Mollitia, earum. Fugiat, cum doloribus dicta unde ullam, 
                     ipsa dolores odit earum placeat eius et commodi quibusdam 
                     atque, minus culpa explicabo rerum.</p>
