--- a/webpages/retroSneakers.html
+++ b/webpages/retroSneakers.html
@@ -32,14 +32,14 @@
                 are confident that you’ll love our sneakers while stepping out in style.</p>
         </div>
         <div class="monthSale">
-            <h1>Monthly offer exclusive bundle</h1>
+            <h1>Our monthly offer exclusive deals</h1>
             <p class="contentParagraph">Monthly deals usually change every 15th of the month.</p>
         </div>
         <div class="box">
             <div class="box-selection">
             <img src="../images/hermes-rivera-w83s82yd3Fk-unsplash.jpg" alt="">
             <div class="box-content">
-                <h1 class="contentHead">Retro Jordans</h1>
+                <h1 class="contentHead">MJ's Finals</h1>
                 <p class="contentParagraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Mollitia, earum. Fugiat, cum doloribus dicta unde ullam, 
                     ipsa dolores odit earum placeat eius et commodi quibusdam 
@@ -53,7 +53,7 @@
             <div class="box-selection2">
             <img src="../images/marcelo-cid-OJxWv0Dr3jA-unsplash.jpg" alt="">
             <div class="box-content">
-                <h1 class="contentHead">Retro Jordans</h1>
+                <h1 class="contentHead">Jordan Reds</h1>
                 <p class="contentParagraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Mollitia, earum. Fugiat, cum doloribus dicta unde ullam, 
                     ipsa dolores odit earum placeat eius et commodi quibusdam 
@@ -66,7 +66,7 @@
             <div class="box-selection3">
             <img src="../images/paul-volkmer-AZf7DL-8Qhk-unsplash.jpg" alt="">
             <div class="box-content">
-                <h1 class="contentHead">Retro Jordans</h1>
+                <h1 class="contentHead">OFF-WHITE X NIKE</h1>
                 <p class="contentParagraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Mollitia, earum. Fugiat, cum doloribus dicta unde ullam, 
                     ipsa dolores odit earum placeat eius et commodi quibusdam 
