--- a/index.html
+++ b/index.html
@@ -4,59 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlyCity</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../project_2HTML/css/home.css">
 </head>
 <body>
-    <nav>
-        <a href="home">Home</a> |
-        <a href="retro">Retro Sneakers</a> |
-        <a href="hype">Hype Sneakers</a> |
-        <a href="aboutUs">About Us</a> |
-        <a href="contact">Contact</a>
-    </nav>
+    <div class="gridContainer">
+        <div class="buttonContainer">
+            <button class="login-button">Login</button>
+            <button class="signup-button">Register</button>
+        </div>
 
-    <header>
-        <img src="" alt="shoes" class="image">
-    </header>
+        <div id="banner">
+            <h1>Welcome to FlyCity</h1>
+        </div>
 
-    <section id="slogan">
-        <h1></h1>
-    </section>
+        <div class="nav-container">
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../webpages/retroSneakers.html">Retro Sneakers</a>
+                <a href="#">Hype Sneakers</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact</a>
+            </nav>
+        </div>
 
-    <section id="about">
-        <p>
+        <div class="bodyText">
+            <h1>Your One-Stop Sneaker Shop</h1>
+            <h2>Style, Quality, and Comfort in Every Step</h2>
+            <p>
+                At FlyCity, we pride ourselves on offering top-quality sneakers that 
+                combine comfort and style. Every pair is meticulously inspected by 
+                our team of experts to ensure you only get the best. Whether you're 
+                looking for retro kicks or the latest hype sneakers, FlyCity has 
+                something for everyone.
+            </p>
+        </div>
 
-        </p>
-    </section>
+        <div class="monthSale">
+            <h1>Monthly Exclusive Deals</h1>
+            <p>Check out our special bundles updated on the 15th of each month!</p>
+        </div>
 
-    <section id="models">
-        <h2>FEATURED MODELS</h2>
-        <ul>
-            <li>
-                <img src="" alt="">
-                <p></p>
-            </li>
-            <li>
-                <img src="" alt="">
-                <p></p>
-            </li>
-            <li>
-                <img src="" alt="">
-                <p></p>
-            </li>
-        </ul>
-    </section>
+        <!-- Featured Products Section -->
+        <div class="productSection">
+            <!-- Product Box 1 -->
+            <div class="box">
+                <img src="../images/product1.jpg" alt="Retro Jordans">
+                <h1>Retro Jordans</h1>
+                <p>Experience the timeless style and comfort of Retro Jordans. Perfect for any sneaker enthusiast!</p>
+                <button id="click">More Info</button>
+            </div>
 
-    <section id="extras">
-        <h2></h2>
-        <p>
-           
-        </p>
-    </section>
+            <!-- Product Box 2 -->
+            <div class="box">
+                <img src="../images/product2.jpg" alt="Air Force 1">
+                <h1>Air Force 1</h1>
+                <p>Classic design meets unparalleled comfort with the iconic Air Force 1.</p>
+                <button id="click">More Info</button>
+            </div>
 
-    <footer>
-        <p>&copy;</p>
-        <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a>
-    </footer>
+            <!-- Product Box 3 -->
+            <div class="box">
+                <img src="../images/product3.jpg" alt="Yeezy Boost 350">
+                <h1>Yeezy Boost 350</h1>
+                <p>Stand out in style with the unique and futuristic Yeezy Boost 350.</p>
+                <button id="click">More Info</button>
+            </div>
+
+            <!-- Product Box 4 -->
+            <div class="box">
+                <img src="../images/product4.jpg" alt="Converse Chuck Taylors">
+                <h1>Converse Chuck Taylors</h1>
+                <p>The ultimate blend of retro vibes and contemporary appeal. A true sneaker classic!</p>
+                <button id="click">More Info</button>
+            </div>
+        </div>
+
+        <!-- Footer Section -->
+        <div class="footerContainer">
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../webpages/retroSneakers.html">Retro Sneakers</a>
+                <a href="#">Hype Sneakers</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact</a>
+            </nav>
+            <p>&copy; 2024 FlyCity. All rights reserved.</p>
+        </div>
+    </div>
 </body>
 </html>
