--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="button-container">
       <button class="login-button" id="loginButton">Login</button>
-      <button class="signup-button">Register</button>
+      <button class="signup-button" id="signup-button">Register</button>
     </div>
   </header>
   
