--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ul>
       <li><a href="../index.html">Home</a></li>
       <li><a href="../webpages/retroSneakers.html">Retro Sneakers</a></li>
-      <li><a href="#">Hype Sneakers</a></li>
+      <li><a href="webpages/hypeSneaker.html">Hype Sneakers</a></li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Contact</a></li>
       <li><a href="../webpages/login.html">Login</a></li>
