--- a/webpages/retroSneakers.html
+++ b/webpages/retroSneakers.html
@@ -13,7 +13,7 @@
             <nav>
                 <a href="../index.html">Home</a>
                 <a href="../webpages/retroSneakers.html">Retro Sneakers</a>
-                <a href="#">Hype Sneakers</a>
+                <a href="hypeSneaker.html">Hype Sneakers</a>
                 <a href="#">About Us</a>
                 <a href="#">Contact</a>
             </nav>
