--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <li><a href="webpages/hypeSneaker.html">Hype Sneakers</a></li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Contact</a></li>
-      <li><a href="../webpages/login.html">Login</a></li>
+      <li><a href="../webpages/login.html">Sign-up</a></li>
     </ul>
   </nav>
 
