--- a/webpages/LoggingPage.html
+++ b/webpages/LoggingPage.html
@@ -30,9 +30,31 @@
         </form>
         </div>
         <div class="footer-container">
-        <footer>
-            <p>&copy; "2024 Fly City" All rights reserved.</p>
-        </footer>
+            <footer>
+                <div class="footer-section footer-links">
+                  <h4>Company</h4>
+                  <a href="#">About Us</a>
+                  <a href="#">Careers</a>
+                  <a href="#">Sustainability</a>
+                  <a href="#">Press</a>
+                </div>
+                <div class="footer-section footer-links">
+                  <h4>Help</h4>
+                  <a href="#">Customer Service</a>
+                  <a href="#">FAQs</a>
+                  <a href="#">Returns & Exchanges</a>
+                </div>
+                <div class="footer-section footer-links">
+                  <h4>Follow Us</h4>
+                  <a href="#">Instagram</a>
+                  <a href="#">Twitter</a>
+                  <a href="#">Facebook</a>
+                  <a href="#">YouTube</a>
+                </div>
+                <div class="footer-bottom">
+                  <p>&copy; 2024 FlyCity. All rights reserved.</p>
+                </div>
+              </footer>
         </div>
     </div>
     <script src="../js/loginscript.js"></script>
