--- a/webpages/hypeSneaker.html
+++ b/webpages/hypeSneaker.html
@@ -39,18 +39,29 @@
     </section>
   </main>
   <footer>
-    <div class="footer-section">
+    <div class="footer-section footer-links">
       <h4>Company</h4>
-      <a href="#">About Us</a> 
+      <a href="#">About Us</a>
       <a href="#">Careers</a>
       <a href="#">Sustainability</a>
+      <a href="#">Press</a>
     </div>
-    <div class="footer-section">
+    <div class="footer-section footer-links">
       <h4>Help</h4>
       <a href="#">Customer Service</a>
       <a href="#">FAQs</a>
+      <a href="#">Returns & Exchanges</a>
     </div>
-    <p>&copy; 2024 FlyCity. All rights reserved.</p>
+    <div class="footer-section footer-links">
+      <h4>Follow Us</h4>
+      <a href="#">Instagram</a>
+      <a href="#">Twitter</a>
+      <a href="#">Facebook</a>
+      <a href="#">YouTube</a>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2024 FlyCity. All rights reserved.</p>
+    </div>
   </footer>
   <script src="../js/hypeSneakers.js"></script>
 </body>
